--- a/signup.html
+++ b/signup.html
@@ -16,7 +16,7 @@
         </div>
         <div class="section">
             <div class="title">Password</div>
-            <div class="field"><input type="text" id="password" name="password"></div>
+            <div class="field"><input type="password" id="password" name="password"></div>
         </div>
         <div class="section">
             <div class="button"><input type="submit" value="Registrar usuario"></div>
